# cpp-project-template

./: CMakeLists.txt
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  ConfigSafeGuard.cmake  LTO.cmake  Sanitizers.cmake  Warnings.cmake
configured/: config.hpp.in
src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h
tests/: CMakeLists.txt  main.cc
